2011-07-24  Rob Buis  <rbuis@rim.com>

        Crash in SVGUseElement::updateContainerOffsets on <use> with no parent
        https://bugs.webkit.org/show_bug.cgi?id=63646

        Reviewed by Darin Adler.

        * svg/custom/use-shadow-root-parent-removal-expected.txt: Added.
        * svg/custom/use-shadow-root-parent-removal.svg: Added.

2011-07-24  Balazs Kelemen  <kbalazs@webkit.org>

        Yet another unreviewed Qt fixery for the weekend.

        Don't use test_expectations until all of the Qt platforms switched to NRWT.
        * platform/qt/Skipped:
        * platform/qt/test_expectations.txt:

2011-07-24  Balazs Kelemen  <kbalazs@webkit.org>

        Unreviewed gardening for Qt.

        * platform/qt/svg/custom/tref-own-content-removal-expected.txt: Added.

2011-07-24  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] inspector/debugger/pause-in-internal-script.html fails
        https://bugs.webkit.org/show_bug.cgi?id=65078

        Unreviewed gardening for Qt.

        * platform/qt/test_expectations.txt: Mark the test as expected TEXT failure.

2011-07-24  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Lot of RenderTree mismatches in fast/multicol
        https://bugs.webkit.org/show_bug.cgi?id=65077

        Unreviewed gardening for Qt.

        * platform/qt/test_expectations.txt: Add expected TEXT failures.

2011-07-24  Rob Buis  <rbuis@rim.com>

        SVG <use> element is not repositioned when moved to x=0 y=0 through script 
        https://bugs.webkit.org/show_bug.cgi?id=53767

        Reviewed by Nikolas Zimmermann.

        * svg/custom/use-move-to-offset-expected.png: Added.
        * svg/custom/use-move-to-offset-expected.txt: Added.
        * svg/custom/use-move-to-offset.svg: Added.

2011-07-23  Kent Tamura  <tkent@chromium.org>

        [Chromium] Update expectations for r91636.

        * platform/chromium-linux/fast/speech/input-appearance-numberandspeech-expected.png: