@@ -11,6 +11,7 @@ body {
     margin: 10px auto;
     background-color: #eee;
     border: 13px solid yellow;
+    padding: 9px;
 }
 </style>
 </head>
