@@ -1,3 +1,12 @@
+2011-07-24  Kent Tamura  <tkent@chromium.org>
+
+        Validation message bubble position is incorrect if the containing block has paddings.
+        https://bugs.webkit.org/show_bug.cgi?id=65091
+
+        Reviewed by Hajime Morita.
+
+        * fast/forms/validation-message-in-relative-body.html: Update the test to cover a padding case.
+
 2011-07-24  Rob Buis  <rbuis@rim.com>
 
         Crash in SVGUseElement::updateContainerOffsets on <use> with no parent
